--- a/style.css
+++ b/style.css
@@ -2,4 +2,11 @@ h1
 {
     color: red;
     background-color: aquamarine;
+    font: 200;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+
+div{
+    border: 1px;    
 }
